fix brandind and github links in the webpages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebMail - Modern Email Client</title>
+    <title>MockMT (Mock Mail)</title>
+    <meta name="description" content="MockMT (Mock Mail) is a modern SMTP test application that acts as an SMTP server and web interface for viewing emails. Built with Go and Vue.js, it is designed for testing email delivery in development and test environments. Features include OAuth authentication, automatic inbox management, email viewing and deletion, and SQLite storage." />
   </head>
   <body>
     <div id="app"></div>
